@@ -24,6 +24,7 @@ munin (work)
   * Plugin: Added two new plugins contributed by Jacques Caruso,
     generic/exim_mailqueue_alt and generic/mailscanner.
   * Plugin: New version of generic/pm3users_ by plugin creator Jacques Caruso.
+  * Plugin: generic/bind9 now handles syslog format as well (by xavier).
 
 munin (1.1.7)
 
